fixed footer menu spacing

--- a/src/styles/elements/_footer.scss
+++ b/src/styles/elements/_footer.scss
@@ -118,6 +118,11 @@ footer {
             }
 
             > li {
+              margin-right: 1.25rem;
+
+              @include breakpoint($tablet-break) {
+                margin-right: 0;
+              }
               &:nth-child(2) {
                 margin-bottom: 0;
 
